replaced 1.5-only functions and gui/ subdir not necessary anymore